--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ shellcheck:
     name: docker.io/koalaman/shellcheck-alpine:stable
     entrypoint: [""]
   script:
-    - for SCRIPT in entrypoint.sh env/*.sh; do shellcheck -x $SCRIPT; done
+    - for SCRIPT in entrypoint.sh examples/*.sh; do shellcheck -x $SCRIPT; done
 
 build:
   stage: Build
