--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: aw1cks/openconnect:latest
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
