--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     name: Shellcheck
     runs-on: ubuntu-latest
     steps:
-      - name: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Run Shellcheck
         uses: ludeeus/action-shellcheck@master
   docker:
