Depend on Shellcheck passing before building image

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
         uses: ludeeus/action-shellcheck@master
   docker:
     name: Docker Build
+    needs:
+      - shellcheck
     runs-on: ubuntu-latest
     steps:
       - name: QEMU
