--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
           
       - name: Build and push
         id: docker_build
@@ -42,7 +49,11 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: aw1cks/openconnect:latest
+          tags: |
+            docker.io/aw1cks/openconnect:latest
+            docker.io/aw1cks/openconnect:${{ github.sha }}
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
