--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: Build
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   push:
     branches:
@@ -7,7 +11,6 @@ on:
   pull_request:
     branches:
       - master
-      
   workflow_dispatch:
 
 jobs:
@@ -41,7 +44,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Build and push
         id: docker_build
