--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to quay.io
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_TOKEN }}
           
       - name: Build and push
         id: docker_build
@@ -57,6 +64,8 @@ jobs:
             docker.io/aw1cks/openconnect:${{ github.sha }}
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.sha }}
+            quay.io/aw1cks/openconnect:latest
+            quay.io/aw1cks/openconnect:${{ github.sha }}
           
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
