--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,6 @@ build:
     - docker:dind
   script:
     - docker login -u "${CI_REGISTRY_USER}" -p "${CI_REGISTRY_PASSWORD}" "${CI_REGISTRY}"
-    - docker build -t "${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHORT_SHA}" -t "${CI_REGISTRY_IMAGE}:latest" --build-arg BUILD_DATE="${CI_COMMIT_TIMESTAMP}" --build-arg COMMIT_SHA="${CI_COMMIT_SHA}" .
+    - docker build -t "${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}" -t "${CI_REGISTRY_IMAGE}:latest" --build-arg BUILD_DATE="${CI_COMMIT_TIMESTAMP}" --build-arg COMMIT_SHA="${CI_COMMIT_SHA}" .
     - docker push "${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}"
     - docker push "${CI_REGISTRY_IMAGE}:latest"
