--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,12 +53,19 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_TOKEN }}
           
+      - name: Get current time
+        uses: 1466587594/get-current-time@v2
+        id: current-time
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            BUILD_DATE=${{ steps.current-time.outputs.time }}
+            COMMIT_SHA=${{ github.sha }}
           tags: |
             docker.io/aw1cks/openconnect:latest
             docker.io/aw1cks/openconnect:${{ github.sha }}
